--- a/110-training_deep_neural_networks.ipynb
+++ b/110-training_deep_neural_networks.ipynb
@@ -29,7 +29,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow version: 2.9.1\n",
+      "Keras Version: 2.9.0\n",
+      "GPU is NOT AVAILABLE\n"
+     ]
+    }
+   ],
    "source": [
     "# Python ≥3.5 is required\n",
     "import sys\n",
@@ -49,6 +59,10 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "assert tf.__version__ >= \"2.0\"\n",
+    "\n",
+    "print(f\"Tensorflow version: {tf.__version__}\")\n",
+    "print(f\"Keras Version: {tf.keras.__version__}\")\n",
+    "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")\n",
     "\n",
     "%load_ext tensorboard\n",
     "\n",
@@ -280,6 +294,8 @@
     "  - Every hidden layer’s weights must be initialized with a special initialisation, called _LeCun normal initialization_. In Keras, this means setting kernel_initializer=\"lecun_normal\".\n",
     "  - The network’s architecture must be sequential (so no loops as in recurrent networks)\n",
     "\n",
+    "![Yann LeCun](img/lecun.png)  \n",
+    "  \n",
     "Using SELU is easy:"
    ]
   },
