--- a/120-document_classification_and_nlp.ipynb
+++ b/120-document_classification_and_nlp.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "id": "CpMifYkx85is",
         "outputId": "aba56e7b-c7f2-49d4-9e8e-2157f2a9b162"
@@ -58,7 +58,7 @@
               "'en'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {
         "id": "phtX6A7p85iw",
         "outputId": "e07d6d43-c481-441e-f4a3-0524593a5acc"
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "eS4zRrUd85ix",
         "outputId": "f483430b-ac7b-4fa7-e209-6a2727e7af27"
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "emkZl-1085iy",
         "outputId": "67bac71f-2104-4bb1-f322-6cfe6143878a"
@@ -464,6 +464,14 @@
             "[nltk_data]    | Downloading package basque_grammars to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package basque_grammars is already up-to-date!\n",
+            "[nltk_data]    | Downloading package bcp47 to\n",
+            "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
             "[nltk_data]    | Downloading package biocreative_ppi to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package biocreative_ppi is already up-to-date!\n",
@@ -744,7 +752,7 @@
             "[nltk_data]    |   Package unicode_samples is already up-to-date!\n",
             "[nltk_data]    | Downloading package universal_tagset to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]    |   Package universal_tagset is already up-to-date!\n",
+            "[nltk_data]    |   Unzipping taggers\\universal_tagset.zip.\n",
             "[nltk_data]    | Downloading package universal_treebanks_v20 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package universal_treebanks_v20 is already up-to-\n",
@@ -773,6 +781,9 @@
             "[nltk_data]    | Downloading package wordnet2021 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package wordnet2021 is already up-to-date!\n",
+            "[nltk_data]    | Downloading package wordnet2022 to\n",
+            "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]    |   Unzipping corpora\\wordnet2022.zip.\n",
             "[nltk_data]    | Downloading package wordnet31 to\n",
             "[nltk_data]    |     C:\\Users\\jcor864\\AppData\\Roaming\\nltk_data...\n",
             "[nltk_data]    |   Package wordnet31 is already up-to-date!\n",
@@ -1000,7 +1011,7 @@
         "\n",
         "The `TFidfVectorizer()` is a great tool from Scikit-Learn to calculate the tf-idf score for each distinct word in the complete data set. It creates a matrix in which the number of rows equals the number of documents (e.g. the number of e-mails in the training set of an e-mail classifier) and the number of columns equals the number of distinct words in the complete set of documents. Each cell contains the tfidf score for the corresponding word in the corresponding document.\n",
         "\n",
-        "The function `get_feature_names()` of `TFidfVectorizer()` return all the differents words in the document set.\n",
+        "The function `get_feature_names_out()` of `TFidfVectorizer()` return all the differents words in the document set.\n",
         "\n",
         "If you would like to use the raw word count instead of the tfidf score you could use `CountVectorizer()`.\n",
         "\n",
@@ -1009,28 +1020,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['and', 'cat', 'dog', 'man']\n",
-            "  (0, 1)\t0.7049094889309326\n",
-            "  (0, 0)\t0.5015489070943787\n",
-            "  (0, 3)\t0.5015489070943787\n",
-            "  (1, 2)\t0.7049094889309326\n",
-            "  (1, 0)\t0.5015489070943787\n",
-            "  (1, 3)\t0.5015489070943787\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\jcor864\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
-            "  warnings.warn(msg, category=FutureWarning)\n"
+            "['and' 'cat' 'dog' 'man']\n"
           ]
         }
       ],
@@ -1042,8 +1039,28 @@
         "vec = TfidfVectorizer()\n",
         "text = ['a man and a cat', 'a man and a dog']\n",
         "X = vec.fit_transform(text)\n",
-        "print(vec.get_feature_names())\n",
-        "print(X)"
+        "print(vec.get_feature_names_out())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([[0.50154891, 0.70490949, 0.        , 0.50154891],\n",
+              "       [0.50154891, 0.        , 0.70490949, 0.50154891]])"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "X.toarray()"
       ]
     },
     {
@@ -1121,7 +1138,7 @@
         "*   convert all text samples in the dataset into sequences of word indices. A \"word index\" would simply be an integer ID for the word. We will only consider the top 20,000 most commonly occuring words in the dataset, and we will truncate the sequences to a maximum length.\n",
         "*   prepare an \"embedding matrix\" which will contain at index i the embedding vector for the word of index i in our word index.\n",
         "*   load this embedding matrix into a Keras Embedding layer, set to be frozen (its weights, the embedding vectors, will not be updated during training).\n",
-        "*   Flatten this two-dimensional layer, at some Dense layers (possibly some dropout) and end with a softmax output over the number of categories.\n",
+        "*   Flatten this two-dimensional layer, add some Dense layers (possibly some dropout) and end with a softmax output over the number of categories.\n",
         "\n",
         "\n",
         "\n",
