--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "10. Artificial Neural Networks with Keras\n",
     "    1.  [Notebook](100-neural_nets_with_keras.ipynb)\n",
-    "    2.  [Exericse Penguins - Breast Cancer](101-exercise_penguins_breast_cancer.ipynb)\n",
+    "    2.  [Exericse Penguins](101-exercise_penguins.ipynb)\n",
     "11. Training Deep Neural Networks\n",
     "    1.  [Notebook](110-training_deep_neural_networks.ipynb)\n",
     "    2.  [Excercise Churn](111-exercise_churn.ipynb)\n",
@@ -99,6 +99,8 @@
     "[Women Clothing Sizes](solutions/042-women_clothing_sizes_prediction_solution.ipynb)  \n",
     "[Demographic Student Score](solutions/051-exercise_demographic_studentscore_svm_solution.ipynb)  \n",
     "[Penquins](solutions/061-exercise_penguins_solution.ipynb)  \n",
+    "[Faces-Dimensionality Reduction](solutions/082-faces_solution.ipynb)  \n",
+    "[Faces-Clustering](solutions/092-unsupervised_learning_exercise_solution.ipynb)\n",
     "  \n",
     "\n",
     "\n",
