--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -16,10 +16,13 @@
     ">_the end of the human race….It would take off on its own,_ \n",
     ">_and re-design itself at an ever-increasing rate._ \n",
     ">_Humans, who are limited by slow biological evolution,_ \n",
-    ">_couldn’t compete, and would be superseded.”_\n",
+    ">_couldn’t compete, and would be superseded._\n",
     ">\n",
-    ">Stephen Hawking, BBC\n",
-    "    \n",
+    ">Stephen Hawking, Theoretical physicist and cosmologist \n",
+    "  \n",
+    ">_Concerns that AI could pose a threat to humanity are \"preposterously ridiculous\"._\n",
+    ">\n",
+    ">Yann Le Cunn, Professor at NYU. Chief AI Scientist at Meta, Considered as one of the godfathers of AI.\n",
     "\n",
     "## INTRODUCTION\n",
     "\n",
@@ -100,7 +103,9 @@
     "[Demographic Student Score](solutions/051-exercise_demographic_studentscore_svm_solution.ipynb)  \n",
     "[Penquins](solutions/061-exercise_penguins_solution.ipynb)  \n",
     "[Faces-Dimensionality Reduction](solutions/082-faces_solution.ipynb)  \n",
-    "[Faces-Clustering](solutions/092-unsupervised_learning_exercise_solution.ipynb)\n",
+    "[Faces-Clustering](solutions/092-unsupervised_learning_exercise_solution.ipynb)  \n",
+    "[Pinguins-ANN](solutions/101-exercise_pinguins_solution.ipynb)  \n",
+    "[MNIST-CNN](solutions/131-deep_computer_vision_with_cnns_exercise_mnist_solution.ipynb)\n",
     "  \n",
     "\n",
     "\n",
