--- a/110-training_deep_neural_networks.ipynb
+++ b/110-training_deep_neural_networks.ipynb
@@ -27,15 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensorflow version: 2.9.1\n",
-      "Keras Version: 2.9.0\n",
+      "Tensorflow version: 2.15.0\n",
       "GPU is NOT AVAILABLE\n"
      ]
     }
@@ -61,7 +60,7 @@
     "assert tf.__version__ >= \"2.0\"\n",
     "\n",
     "print(f\"Tensorflow version: {tf.__version__}\")\n",
-    "print(f\"Keras Version: {tf.keras.__version__}\")\n",
+    "# print(f\"Keras Version: {tf.keras.__version__}\")\n",
     "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")\n",
     "\n",
     "%load_ext tensorboard\n",
@@ -879,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.10"
   },
   "nav_menu": {
    "height": "360px",
